src/objects/Loaner_Line__c/fields/Return_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Due_Date__c</fullName>
    <description>addition of Loaner Duration in Days and Total Extended Days to Shipped Date from Order Line</description>
    <formula>IF( OR(ISPICKVAL( Loaner__r.Loaner_Duration__c , &apos;No_Return&apos;), Return_Instructions__c = &apos;No return&apos;), null, 
 Shipped_Date__c +Loaner__r.Loaner_Duration_In_Days__c+Total_Extended_Days__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product to be returned  before or on this date.</inlineHelpText>
    <label>Return Due Date</label>
    <type>Date</type>
</CustomField>