src/objects/Loaner_Line__c/fields/Return_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Return_Instructions__c</fullName>
    <formula>IF(ISBLANK(Product__r.Return_Instruction__c ), 
&apos;No return&apos;,
$Label.Return_Instructions1+
IF(ISBLANK( Product__r.A_C__c ),  
    Product__r.Return_Instruction__c + &apos; in &apos; +  Product__r.Location__c +&apos;&quot;&apos;+BR() 
+&apos; d. Click Outbound RMA NOT Needed box.&apos;  ,

  Product__r.Return_Instruction__c + &apos; in &apos; +  Product__r.Location__c +&apos;-A/C#:&apos;+ Product__r.A_C__c +&apos;&quot;&apos; + BR()+&apos; d. Click Outbound RMA NOT Needed box.&apos; 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Instructions</label>
    <type>Text</type>
</CustomField>