src/objects/Loaner_Line__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <formula>If(Manual_Update__c = true,   Manual_Shipped_Date__c , Order_Line__r.Actual_Ship_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>