src/objects/Loaner_Line__c/recordTypes/Extension_Item.recordType-meta.xml
<RecordType>
    <fullName>Extension_Item</fullName>
    <active>true</active>
    <label>Extension Item</label>
</RecordType>