src/objects/Loaner_Line__c/recordTypes/Loaner_Item.recordType-meta.xml
<RecordType>
    <fullName>Loaner_Item</fullName>
    <active>true</active>
    <label>Loaner Item</label>
</RecordType>