src/objects/Loaner_Line__c/recordTypes/Loaner_Item_Pending_Sales_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Loaner_Item_Pending_Sales_Record_Type</fullName>
    <active>true</active>
    <label>Loaner Item Pending Sales Record Type</label>
</RecordType>