src/objects/Loaner_Line__c/recordTypes/Loaner_Item_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Loaner_Item_Read_Only</fullName>
    <active>true</active>
    <label>Loaner Item Read Only</label>
</RecordType>