src/objects/Loaner_Line__c/validationRules/Loaner_Line_Return_Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Loaner_Line_Return_Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   NOT(ISBLANK(Shipped_Date__c))
, Loaner_Qty__c &lt;  Total_Return_Quantity__c,  Ship_Status__c  &lt;&gt; &apos;Cancelled&apos;)</errorConditionFormula>
    <errorMessage>Loaner Qty Should always greater or equal to  Return Quantity</errorMessage>
</ValidationRule>