src/objects/Loaner_Line__c/validationRules/Loaner_qty_shold_be_Greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Loaner_qty_shold_be_Greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Loaner_Qty__c &lt;= 0  &amp;&amp;  Ship_Status__c != &apos;Cancelled&apos;</errorConditionFormula>
    <errorMessage>Loaner Quantity Should be Greater than Zero</errorMessage>
</ValidationRule>