src/objects/Loaner_Line__c/validationRules/LoanerLineonApprovedLoaner.validationRule-meta.xml
<ValidationRule>
    <fullName>LoanerLineonApprovedLoaner</fullName>
    <active>true</active>
    <description>Preventing new Loaner Line creation with Approved Loaner</description>
    <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(Loaner__r.Status_Approval__c , &apos;Approved&apos;) &amp;&amp;  NOT($Profile.Name =&apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>New Line will not be added on Approved Loaner</errorMessage>
</ValidationRule>