src/objects/Loaner_Line__c/validationRules/LoanerPriceshouldBeGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>LoanerPriceshouldBeGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISNEW()),

OR(
Loaner_Price_100_999_column_price__c &lt;=0,  ISNULL(Loaner_Price_100_999_column_price__c )
),
 RecordType.DeveloperName =&apos;Loaner_Item&apos;
 


)</errorConditionFormula>
    <errorDisplayField>Loaner_Price_100_999_column_price__c</errorDisplayField>
    <errorMessage>Loaner Price Should be Greater Than $0</errorMessage>
</ValidationRule>